Various dark mode and sentry error fixes (#1977)

--- a/src/extension/features/toolkit-reports/pages/root/components/report-selector/styles.scss
+++ b/src/extension/features/toolkit-reports/pages/root/components/report-selector/styles.scss
@@ -1,5 +1,5 @@
 .tk-report-selector {
-  background-color: #003540;
+  background-color: var(--tk-ive-report-header-background-color);
   color: #ffffff;
   height: 3em;
 
@@ -7,8 +7,8 @@
     cursor: pointer;
     border-radius: 1000px;
     color: #ffffff;
-    font-size: .9em;
-    padding: .4em 1em;
+    font-size: 0.9em;
+    padding: 0.4em 1em;
     margin-right: 1em;
 
     &--active {
